--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test --passWithNoTests
+    # - run: npm test --passWithNoTests
       env:
         CI: true
     - name: Build docker image
